--- a/index.html
+++ b/index.html
@@ -6,40 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calc</title>
     <link rel="stylesheet" href="./main.css">
+    <script src="./main.js" defer></script>
 </head>
 <body>
     <div id="container">
         <div id="screen">
-            <div><p>hwefhoiewhfieofwolfh</p></div>
-            <div><h3>svknhiwehoefioewhoif</h3></div>
+            <div><p id="operations">&nbsp;</p></div>
+            <div><p id="number-op">0</p></div>
         </div>
-        <div id="btns">
-            <button id="color-yellow">AC</button>
-            <button id="color-red">C</button>
+        <div class="btns">
+            <button id="clear">Clear</button>
+            <button id="equals">=</button>
         </div>
-        <div id="btns">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>÷</button>
+        <div class="btns">
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">÷</button>
         </div>
-        <div id="btns">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>x</button>
+        <div class="btns">
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">x</button>
         </div>
-        <div id="btns">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>-</button>
+        <div class="btns">
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">-</button>
         </div>
-        <div id="btns">
-            <button>.</button>
-            <button>0</button>
-            <button>=</button>
-            <button>+</button>
+        <div class="btns">
+            <button id="decimal">.</button>
+            <button class="btn">0</button>
+            <button id="percent">%</button>
+            <button class="btn">+</button>
         </div>
     </div>
 </body>
