Correcting the decimal problem; Adding modulo

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         <div class="btns">
             <button id="decimal">.</button>
             <button class="btn">0</button>
-            <button id="percent">%</button>
+            <button class="btn">%</button>
             <button class="btn">+</button>
         </div>
     </div>
+    <h1 id="snark"></h1>
 </body>
 </html>
